almost there, seems like generating otp failes
looking into request responses from kc, "invalid authentication code"

--- a/.env
+++ b/.env
@@ -7,5 +7,7 @@ POSTGRES_PASSWORD=admin
 # APP envs
 HOST=localhost
 PORT=3000
-REACT_APP_KC_REALM=test
-REACT_APP_KC_CLIENT_ID=test-client
+# REACT_APP_KC_REALM=test
+# REACT_APP_KC_CLIENT_ID=test-client
+REACT_APP_KC_REALM=test-otp
+REACT_APP_KC_CLIENT_ID=test-otp
