--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "16.11.59",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "cypress-otp": "1.0.3",
     "keycloak-js": "19.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:cy": "cypress open"
   },
   "eslintConfig": {
     "extends": [
