test(): now generates correct totp code!
don't actually need cypress-otp, since we buypass that cypress-keycloak
command. we could potentially extract cypress-keycloak.login function as
well and don't need any extra libraries

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=admin
 
 # APP envs
-HOST=localhost
-PORT=3000
+# HOST=localhost
+# PORT=3000
 # REACT_APP_KC_REALM=test
 # REACT_APP_KC_CLIENT_ID=test-client
 REACT_APP_KC_REALM=test-otp
