--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["cypress", "node", "./support"],
+    "types": ["cypress", "node", "./support", "../node_modules"],
     "jsx": "react"
   },
   "include": ["**/*.ts", "run.js"]
