--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     ]
   },
   "devDependencies": {
+    "@types/totp-generator": "^0.0.4",
     "cypress": "10.8.0",
     "cypress-keycloak": "1.9.0",
-    "react-router-dom": "6.4.0"
+    "otplib": "12.0.1",
+    "react-router-dom": "6.4.0",
+    "totp-generator": "0.0.13"
   }
 }
